Trycing to fix problem with hamburgermenu on small screes, links are showing when menu is closed. Will leave this for now.

--- a/themes/atzjo/css/style.css
+++ b/themes/atzjo/css/style.css
@@ -52,15 +52,24 @@ p {
 
 .nav a {
   font-size: 2rem;
-  color: #bdc3c7;
+  color: #bdc3c7 !important;
   text-decoration: none;
+}
+
+.nav a:hover {
+  text-decoration: underline !important; /* Lägg till en understrykning vid hover */
 }
 
 .header a {
-  color: #bdc3c7;
+  color: #bdc3c7 !important;
   text-decoration: none;
 }
 
+@media (max-width: 768px) {
+  .logo {
+    display: none;
+  }
+}
 /* Blockquote */
 blockquote {
   font-style: italic;
@@ -150,9 +159,7 @@ pre code {
 }
 
 .tech-link {
-  margin: 0;
   background: none;
-  color: inherit;
   display: block; /* Så att knappen täcker hela boxen */
   text-decoration: none; /* Ta bort understrykning om du skulle använda länkar */
   width: 100%;
@@ -190,6 +197,58 @@ pre code {
   }
   .technology .article {
     width: 100%;
+  }
+}
+.slide {
+  overflow-y: hidden !important;
+  transition: height 0.5s ease-in !important;
+}
+
+.nav ul {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1em 0;
+  list-style: none;
+}
+
+.nav ul li {
+  padding: 0 1em;
+}
+
+.nav a, .nav-toggle {
+  color: #333;
+}
+
+.nav-toggle {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .header {
+    flex-direction: column;
+  }
+  .nav ul {
+    flex-direction: column;
+    padding-bottom: 1em;
+  }
+  .nav ul li {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .nav ul li a {
+    display: block;
+    padding: 0.5em 0;
+  }
+  .js .nav-toggle {
+    display: block;
+    float: right;
+    width: 2em;
+    margin: 0.6667em 0;
+    font-size: 1.5rem;
+    line-height: 2em;
+    text-align: center;
+    cursor: pointer;
   }
 }
 /*!
