--- a/themes/atzjo/scss/technology.scss
+++ b/themes/atzjo/scss/technology.scss
@@ -54,7 +54,7 @@
 
 .tech-link {
   background: none;
-  color: inherit;
+  // color: inherit;
   display: block; /* Så att knappen täcker hela boxen */
   text-decoration: none; /* Ta bort understrykning om du skulle använda länkar */
   width: 100%;
